fix horizontal scroll

--- a/styles/common_styles.scss
+++ b/styles/common_styles.scss
@@ -6,11 +6,11 @@ body {
   // position: relative;
 }
 
-.app-wrapper {
-  overflow-x: hidden;
-  width: 100%;
-  height: 100%;
-}
+// .app-wrapper {
+//   overflow-x: hidden;
+//   width: 100%;
+//   height: 100%;
+// }
 
 input[type='number']::-webkit-inner-spin-button,
 input[type='number']::-webkit-outer-spin-button {
